fixed bug on first paranoma not showing; fixed bug on teleport button not showing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 
 #teleport {
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     right: 60px;
     top: 10px;
     border: none;
